--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2485,7 +2485,8 @@ input, select, textarea {
 		input[type="reset"].icon,
 		input[type="button"].icon,
 		.button.icon {
-			padding-left: 1.35em;
+			left: 17em;
+			border:none;
 		}
 
 			input[type="submit"].icon:before,
@@ -2493,6 +2494,7 @@ input, select, textarea {
 			input[type="button"].icon:before,
 			.button.icon:before {
 				margin-right: 0.5em;
+				margin-top: 55px;
 			}
 
 		input[type="submit"].fit,
@@ -2507,7 +2509,8 @@ input, select, textarea {
 		input[type="reset"].small,
 		input[type="button"].small,
 		.button.small {
-			font-size: 0.8em;
+			font-size: 1.2em;
+			border:none;
 		}
 
 		input[type="submit"].large,
@@ -3090,7 +3093,7 @@ input, select, textarea {
 			#footer {
 				background-attachment: scroll;
 				background-color: #1f1815;
-				background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+				background-image: url("images/overlay.png"), url("../../images/clds.jpg");
 				background-position: top left,						bottom center;
 				background-repeat: repeat,							no-repeat;
 				background-size: auto,							cover;
